--- a/hugo/assets/sass/mystyle.scss
+++ b/hugo/assets/sass/mystyle.scss
@@ -23,19 +23,12 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 // Import only what you need from Bulma
-// @import "../node_modules/bulma/sass/utilities/_all.sass";
-// @import "../node_modules/bulma/sass/base/_all.sass";
-// @import "../node_modules/bulma/sass/elements/button.sass";
-// @import "../node_modules/bulma/sass/elements/container.sass";
-// @import "../node_modules/bulma/sass/elements/title.sass";
-// @import "../node_modules/bulma/sass/form/_all.sass";
-// @import "../node_modules/bulma/sass/components/navbar.sass";
-// @import "../node_modules/bulma/sass/layout/hero.sass";
-// @import "../node_modules/bulma/sass/layout/section.sass";
 @import "../../../bulma/sass/utilities/_all.sass";
-@import "../../../bulma/sass/layout/section.sass";
 @import "../../../bulma/sass/components/card.sass";
 @import "../../../bulma/sass/grid/_all.sass";
 @import "../../../bulma/sass/elements/other.sass";
-
-
+@import "../../../bulma/sass/components/navbar.sass";
+@import "../../../bulma/sass/elements/icon.sass";
+@import "../../../bulma/sass/elements/progress.sass";
+@import "../../../bulma/sass/layout/_all.sass";
+@import "../../../bulma/sass/helpers/_all.sass";
