--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -1,3 +1,5 @@
+{{ define "title" }}Življenjepis | {{ .Site.Title }}{{ end }}
+
 {{ define "main" }}
 
 <section id="homepage-hero-banner" class="hero is-info is-fullheight">
