--- a/hugo/layouts/partials/navbar.html
+++ b/hugo/layouts/partials/navbar.html
@@ -31,13 +31,13 @@
 
     <div class="navbar-end">
 
-      <a class="navbar-item" href="https://github.com/nikerzetic">
+      <a class="navbar-item" href="{{ $.Site.Params.github }}">
         <span class="icon">
           <i class="fas fa-brands fa-github"></i>
         </span>
       </a>
 
-      <a class="navbar-item" href="https://www.linkedin.com/in/nik-erzetic-158b7318a/">
+      <a class="navbar-item" href="{{ .Site.Params.linkedin }}">
         <span class="icon">
           <i class="fas fa-brands fa-linkedin"></i>
         </span>
