Repaired GH action

--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -2,7 +2,7 @@
 
 {{ define "main" }}
 
-<section id="homepage-hero-banner" class="hero is-info is-fullheight">
+<section id="homepage-hero-banner" class="hero is-info is-fullheight" style="background-image: url('/images/landscape_banner.jpg');">
     <div class="hero-body">
         <div class="container block">
             <div class="columns is-centered">
